--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         }
 
         .subtitle {
-            color: white;
+            color: black;
             font-size: 1.2em;
             margin-bottom: 30px;
             font-weight: 300;
@@ -169,7 +169,9 @@
     <div class="page-transition"></div>
     <div class="glass-container">
         <h1>Welcome to Our Gallery</h1>
-        <p class="subtitle">Every moment with you is a treasure worth keeping...</p>
+        <span  class="subtitle">I AM SORRY</span>
+        <img src="SORRY.jpg" alt="Image" style="height: 2em;">
+        
         <div class="btn-container">
             <button class="btn color-btn">Change Colors 🎨</button>
             <button class="btn">Enter Our Love Story ✨</button>
